--- a/src/main/resources/jimp/fxml/main.fxml
+++ b/src/main/resources/jimp/fxml/main.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jimp.controller.MainController">
+<BorderPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jimp.controller.MainController">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -60,41 +61,58 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Slider fx:id="cycleSlider" blockIncrement="5.0" majorTickUnit="1000.0" max="1000.0" maxHeight="30.0" maxWidth="300.0" min="1.0" minHeight="30.0" minWidth="300.0" minorTickCount="10" prefHeight="30.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" />
+                        <Slider fx:id="cycleSlider" blockIncrement="5.0" majorTickUnit="10.0" maxHeight="30.0" maxWidth="300.0" min="1.0" minHeight="30.0" minWidth="300.0" minorTickCount="1" prefHeight="30.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
                      </children>
                      <HBox.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="50.0" right="20.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <CheckBox alignment="CENTER" mnemonicParsing="false" text="Odbicia" />
+                     </children>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label alignment="CENTER" contentDisplay="CENTER" text="Czas cyklu" textAlignment="CENTER" />
+                        <TextField maxHeight="30.0" minHeight="30.0" prefHeight="30.0" />
+                     </children>
+                     <HBox.margin>
+                        <Insets right="20.0" />
                      </HBox.margin>
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" text="Szerokość ogrodu" />
-                        <TextField alignment="CENTER" maxHeight="30.0" maxWidth="120.0" minHeight="30.0" minWidth="120.0" prefHeight="30.0" prefWidth="120.0" fx:id="xTextField" />
+                        <TextField alignment="CENTER" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" prefHeight="30.0" prefWidth="100.0" fx:id="xTextField" />
                      </children>
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
-                     <padding>
+                     <HBox.margin>
                         <Insets right="10.0" />
-                     </padding>
+                     </HBox.margin>
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" text="Długość ogrodu" />
-                        <TextField fx:id="yTextField" alignment="CENTER" maxHeight="30.0" maxWidth="120.0" minHeight="30.0" minWidth="120.0" prefHeight="30.0" prefWidth="120.0" />
+                        <TextField fx:id="yTextField" alignment="CENTER" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" prefHeight="30.0" prefWidth="100.0" />
                      </children>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </VBox>
-                  <Button fx:id="changeSizeButton" mnemonicParsing="false" onAction="#changeSizeGardenBox" text="Zmień rozmiar">
                      <HBox.margin>
-                        <Insets left="50.0" top="40.0" />
+                        <Insets />
+                     </HBox.margin>
+                  </VBox>
+                  <Button fx:id="changeSizeButton" maxWidth="120.0" minWidth="120.0" mnemonicParsing="false" onAction="#changeSizeGardenBox" prefWidth="120.0" text="Zmień rozmiar">
+                     <HBox.margin>
+                        <Insets left="20.0" top="40.0" />
                      </HBox.margin>
                   </Button>
                   <Button fx:id="startButton" mnemonicParsing="false" onAction="#startAction" prefHeight="25.0" prefWidth="108.0" text="Start">
                      <HBox.margin>
-                        <Insets left="50.0" top="40.0" />
+                        <Insets left="20.0" right="20.0" top="40.0" />
                      </HBox.margin></Button>
                </children>
             </HBox>
@@ -102,7 +120,10 @@
       </VBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="400.0" width="800.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="400.0" width="800.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin></Canvas>
    </center>
    <bottom>
       <HBox BorderPane.alignment="CENTER">
